# moods

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 2020-07-30_create-db.sql  20200801204718_create_user.sql  20200819005721_event.sql  20200819011628_user_event.sql  20200829191230_add-organization-table.sql  20200829192205_add-user.sql  20200829192604_add-contact.sql  20200829193445_add-appointments.sql  20200829194151_add-event.sql  20200829194619_add-places.sql  20200829194706_add-suppliers.sql  20200829194706_add-trader.sql  20200829195809_add-tasks.sql  20200914010521_add-comment.sql  20200914011648_add-project.sql  20200914012716_add-email.sql  20200916001132_add-package-bid.sql  20200917022304_add-to-do.sql  20200917025956_add-lead.sql  20200917032208_add-note.sql  20200917043229_add-employee.sql  20200917232833_create-user.sql  20200917233004_create-appointment.sql  20200917233021_create-task.sql  20200917233036_create-comment.sql  20200917233107_create-project.sql  20200917233153_create-bid.sql  20200917233211_create-todo.sql  20200917233226_create-lead.sql  20200917233240_create-note.sql  20200917233257_create-employee.sql  20200917233315_create-organization.sql  20200918000011_create-organization.sql  20200918000058_create-note.sql  20200918000308_create-contact.sql  20200918000428_create-user.sql  20200918000542_create-employee.sql  20200918000934_create-proposal.sql  20200918003112_create-lead.sql  20200918003526_create-task.sql  (+7 more)
src/: main.rs
src/config/: mod.rs
src/db/: appointment.rs  contact.rs  employee.rs  event.rs  mod.rs  note.rs  (+4 more)
(+21 files in other folders)
